basic logic is working within console.

--- a/index.html
+++ b/index.html
@@ -6,35 +6,45 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hangman Game</title>
 
-    <script src="/assets/javascript/game.js"></script>
-    <link href="/assets/css/reset.css" rel="stylesheet">
-    <link href="/assets/css/style.css" rel="stylesheet">
+    <script src="./assets/javascript/game.js"></script>
+    <link href="./assets/css/reset.css" rel="stylesheet">
+    <link href="./assets/css/style.css" rel="stylesheet">
+
+
+
+<!-- <script>
+    var randomWord = words[Math.floor(Math.random() * words.length)].split("");
+</script> -->
+
 
 </head>
 <body>
     
-    <header id="" class=""></header>
+    <header id="" class="">
+    </header>
+
 
     <main id="" class="">
         <br>
-        <h1>Press Any Key to Get Started!</h1>
+        <h1 id="" class="">Press Any Key to Get Started!</h1>
         <br>
-        <h2>Wins: </h2>
-        <h3 id="" class=""></h3>
+        <h2 id="" class="">Wins: </h2>
+        <h3 id="wins" class="">##</h3>
         <br>
-        <h2>Current Word</h2>
-        <h3 id="" class=""></h3>
+        <h2 id="" class="">Current Word</h2>
+        <h3 id="currentWord" class=""></h3>
         <br>
-        <h2>Number of Guesses Remaining</h2>
-        <h3 id="" class=""></h3>
+        <h2 id="" class="">Number of Guesses Remaining</h2>
+        <h3 id="guessesRemaining" class="">##</h3>
         <br>
         <h2>Letters Already Guessed</h2>
-        <h3 id="" class=""></h3>   
+        <h3 id="alreadyGuessed" class="">ABCDEF</h3>   
         <br>     
     </main>
 
 
-    <footer id="" class=""></footer>
+    <footer id="" class="">
+    </footer>
 
 
 
