changed to Current Name
was Current Word

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <br>
             <section id="stuff2" class="content">
                 <div id="container" class="">
-                    <h2 id="currentWordHeading" class="">Current Word:</h2>
+                    <h2 id="currentWordHeading" class="">Current Name:</h2>
                     <br>
                     <h3 id="currentWord" class=""></h3>
                 </div>
